# l1avgvo

./: ArcBall.h  CMakeLists.txt  README.txt  SE3.cpp  SE3.hpp  backprojavgsac.cpp  backprojavgsac.hpp  cardan.cpp  cardan.hpp  main.cpp  mytime.hpp  optimizer.cpp  optimizer.hpp  render.hpp  renderVO.hpp  run_demo.sh  tools.cpp  tools.hpp
data/: calib.txt  options.txt
data/seq00_part1/: 0_to_1.txt  100_to_101.txt  101_to_102.txt  102_to_103.txt  103_to_104.txt  104_to_105.txt  105_to_106.txt  106_to_107.txt  107_to_108.txt  108_to_109.txt  109_to_110.txt  10_to_11.txt  110_to_111.txt  111_to_112.txt  112_to_113.txt  113_to_114.txt  114_to_115.txt  115_to_116.txt  116_to_117.txt  117_to_118.txt  118_to_119.txt  119_to_120.txt  11_to_12.txt  120_to_121.txt  121_to_122.txt  122_to_123.txt  123_to_124.txt  124_to_125.txt  125_to_126.txt  126_to_127.txt  127_to_128.txt  128_to_129.txt  129_to_130.txt  12_to_13.txt  130_to_131.txt  131_to_132.txt  132_to_133.txt  133_to_134.txt  134_to_135.txt  135_to_136.txt  (+261 more)
