cmake_minimum_required(VERSION 2.8)

PROJECT(l1avgVO)
SET(LIEOPT_VERSION 0.1.0)

SET(CPACK_PACKAGE_DESCRIPTION_SUMMARY "l1avgVO")
SET(CPACK_PACKAGE_VENDOR "German Ros")
SET(CPACK_PACKAGE_VERSION_MAJOR "0")
SET(CPACK_PACKAGE_VERSION_MINOR "1")
SET(CPACK_PACKAGE_VERSION_PATCH "0")

INCLUDE(CPack)

SET(CMAKE_INSTALL_PREFIX ${PROJECT_BINARY_DIR})

SET(RUNTIME_OUTPUT_DIRECTORY "${PROJECT_BINARY_DIR}/bin")

SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${CMAKE_SOURCE_DIR})

FIND_PACKAGE(Eigen3 REQUIRED)
INCLUDE_DIRECTORIES(${EIGEN3_INCLUDE_DIR})

FIND_PACKAGE(OpenCV REQUIRED)
FIND_PACKAGE(OpenGL REQUIRED)

SET(CMAKE_BUILD_TYPE distribution)
SET(CMAKE_CXX_FLAGS_DISTRIBUTION "-march=native -msse3 -DEIGEN_NO_DEBUG -DEIGEN_YES_I_KNOW_SPARSE_MODULE_IS_NOT_STABLE_YET -O3")

SET(l1avgVO_sources_cpp
	main.cpp      
	backprojavgsac.cpp
	optimizer.cpp
	cardan.cpp
	SE3.cpp
	ArcBall.cpp
	tools.cpp
   )

SET(l1avgVO_sources_hpp
	backprojavgsac.hpp
	optimizer.hpp
	cardan.hpp
	SE3.hpp
	mytime.hpp
	ArcBall.h
	render.hpp
	renderVO.hpp
	tools.hpp
   )

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})

SET(l1avgVO_sources ${l1avgVO_sources_cpp})

ADD_EXECUTABLE(l1avgVO ${l1avgVO_sources})
TARGET_LINK_LIBRARIES(l1avgVO ${OpenCV_LIBS} ${OPENGL_gl_LIBRARY} ${OPENGL_glu_LIBRARY} )



